--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             <audio id="scream-sound" preload="auto">
                 <source src="sound.mp3" type="audio/mpeg">
             </audio>
+            <audio id="scream-sound2" preload="auto">
+                <source src="sound2.mp3" type="audio/mpeg">
+            </audio>
         </div>
     </div>
     
